--- a/maket-01/css/style.css
+++ b/maket-01/css/style.css
@@ -6,11 +6,17 @@ body {
   font-family: "Playfair Display", serif;
   line-height: 1.5rem;
   color: #626262;
+  padding-top: 4.8125rem;
+  padding-bottom: 4.375rem;
 }
 
 .wrapper {
   width: 55.8125rem;
   margin: auto;
+}
+
+.header {
+  margin-bottom: 6.5rem;
 }
 
 .menu {
@@ -38,6 +44,15 @@ body {
   margin-bottom: 4.6875rem;
 }
 
+.link {
+  text-decoration: none;
+  color: #626262;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
 img {
   display: block;
   width: 100%;
@@ -47,6 +62,7 @@ img {
 }
 
 .about {
+  display: block;
   color: #b4ad9e;
   font-family: "Ubuntu", sans-serif;
   font-size: 0.875rem;
@@ -71,7 +87,15 @@ img {
   line-height: 1.5rem;
   margin: auto;
   border: 0.0625rem solid #626262;
-  width: 164px;
-  height: 60px;
-  padding: 1.3125rem 2.125rem;
+  color: #626262;
+  width: 10.25rem;
+  height: 3.75rem;
+  text-decoration: none;
+  text-align: center;
+  line-height: 3.75rem;
+}
+
+.button:hover {
+  background-color: #626262;
+  color: #ffffff;
 }
