--- a/maket-02/css/style.css
+++ b/maket-02/css/style.css
@@ -1,15 +1,112 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400");
 
 /* font-family: 'Roboto', sans-serif;
 font-family: 'Open Sans', sans-serif; */
 
 body {
-    background-color: #ffffff;
-    padding-top: 38px;
-    padding-bottom: 81px;
+  background-color: #ffffff;
+  padding-top: 38px;
+  padding-bottom: 81px;
 }
 
 .wrap {
-    width: 1110px;
-    margin: auto;
+  width: 1110px;
+  margin: auto;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 118px;
+}
+
+.logo {
+  color: #555252;
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 32px;
+  text-transform: uppercase;
+  letter-spacing: -0.6px;
+  text-decoration: none;
+}
+
+.decor-letter {
+  color: #1abc9c;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  letter-spacing: -0.6px;
+}
+
+.menu {
+  display: flex;
+}
+
+.menu-iteam:not(:last-child) {
+  margin-right: 30px;
+}
+
+.menu-iteam a {
+  display: block;
+  color: #0f0101;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 11px;
+  text-transform: uppercase;
+  letter-spacing: -0.28px;
+  text-decoration: none;
+}
+
+.menu-iteam a:hover {
+  color: #1abc9c;
+}
+
+.section-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  color: #515151;
+  font-family: "Roboto", sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 32px;
+  text-transform: uppercase;
+  letter-spacing: -0.96px;
+  margin-bottom: 32px;
+  align-items: center;
+}
+
+.underline {
+  display: block;
+  width: 164px;
+  border: 3px solid #1abc9c;
+  margin-bottom: 92px;
+}
+
+.gallery-product {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.gallery-iteam {
+  flex-basis: 24%;
+}
+
+.image {
+
+}
+
+img {
+  background-color: rebeccapurple;
+  display: block;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  height: 264px;
 }
