--- a/test/src/sass/styles.scss
+++ b/test/src/sass/styles.scss
@@ -11,3 +11,6 @@
 @import 'frontend-design';
 @import 'facts';
 @import 'frontend-production';
+@import 'section-contact';
+@import 'section-form';
+@import 'footer';
