--- a/test-01/src/sass/reset.scss
+++ b/test-01/src/sass/reset.scss
@@ -14,17 +14,23 @@ img {
   height: auto;
 }
 
-ul {
+ul, li, p, h1, h2, h3 {
   margin: 0;
   padding: 0;
 }
 
 li {
-  margin: 0;
-  padding: 0;
   list-style: none;
 }
 
 a {
   text-decoration: none;
+}
+
+span {
+  display: inline-block;
+}
+
+figure {
+  margin: 0;
 }
