--- a/test-01/src/sass/styles.scss
+++ b/test-01/src/sass/styles.scss
@@ -6,3 +6,13 @@
 @import 'reset';
 @import 'mixin';
 @import 'main';
+@import 'header';
+@import 'slide-new-collection';
+@import 'collection';
+@import 'collection-image';
+@import 'gallery';
+@import 'gallery__box-first';
+@import 'gallery__box-second';
+@import 'line';
+@import 'slider';
+@import 'note';
